[gd_scene load_steps=6 format=2]

[ext_resource path="res://shared/scenes/projectiles/projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://mini/shooter/images/projectiles/missile.png" type="Texture" id=2]
[ext_resource path="res://mini/shooter/scripts/projectiles/dragon_missile.gd" type="Script" id=3]
[ext_resource path="res://shared/scripts/circle.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.90898
height = 9.67862

[node name="DragonMissile" instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 3 )
_direction = -90.0

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource( 1 )
disabled = true

[node name="DeathTimer" type="Timer" parent="." index="3"]
wait_time = 0.33
one_shot = true

[node name="BigBoom" type="Node2D" parent="." index="4"]
visible = false
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 4 )
_radius = 120.0

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
